--- a/Sensors/src/main/resources/application.properties
+++ b/Sensors/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+
+logging.level.root=info
+logging.level.org.springframework=warn
+logging.level.uk.co.osiris=debug
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} - %-5level - %-50logger{50} : %msg%n
